# pyaiagent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: 00_basic_agent.py  01_conversation_memory.py  02_tools_basic.py  03_structured_output.py  04_config_advanced.py  05_dynamic_instructions.py  06_fastapi_basic.py  07_fastapi_with_lifespan.py  08_error_handling.py  09_inheritance_composition.py  10_context_manager.py  11_message_formatting.py  12_dependency_injection.py  13_custom_client.py  14_validation_retries.py  15_multi_agent.py  README.md
src/pyaiagent/: __init__.py  utils.py
src/pyaiagent/core/: agent.py  config.py  exceptions.py  handoff.py  orchestration.py  tools.py
src/pyaiagent/openai/: agent.py  client.py  config.py  exceptions.py  handoff.py  orchestration.py  shutdown.py  tools.py
src/pyaiagent/openai/exceptions/: definition.py  process.py
src/pyaiagent/openai/manager/: config.py  instruction.py  tool.py  tool_schema.py
src/pyaiagent/utils/: singleton.py
tests/: test_utils.py
tests/openai/: test_agent.py  test_client.py  test_config.py  test_exceptions.py  test_handoff.py  test_orchestration.py  test_tools.py
