[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaiagent"
version = "0.1.0"
description = "A lightweight, high-performance framework for building OpenAI-powered agents in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Troy M Jose", email = "troymjose@gmail.com" }
]
keywords = [
    "openai",
    "ai",
    "agent",
    "llm",
    "gpt",
    "async",
    "framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "openai>=1.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/trjose/pyaiagent"
Repository = "https://github.com/trjose/pyaiagent"
Issues = "https://github.com/trjose/pyaiagent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyaiagent = ["py.typed"]

