[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaiagent"
version = "0.1.0"
description = "A lightweight, high-performance framework for building OpenAI-powered agents in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Troy M Jose", email = "troymjose@gmail.com" }
]
keywords = [
    "openai",
    "ai",
    "agent",
    "llm",
    "gpt",
    "async",
    "framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "openai>=1.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/troymjose/pyaiagent"
Repository = "https://github.com/troymjose/pyaiagent"
Issues = "https://github.com/troymjose/pyaiagent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyaiagent = ["py.typed"]


## 1. Make sure everything is committed
#git add .
#git commit -m "Prepare release v0.1.0"
#
## 2. Create a tag
#git tag -a v0.1.0 -m "Initial release"
#
## 3. Push code and tag
#git push origin master
#git push origin v0.1.0
#
## 4. Build and publish to PyPI
#python -m build
#twine upload dist/*
#
#Future workflow:
#Develop on master (or use feature branches for big changes)
#When ready to release → create a new tag (v0.2.0, etc.)
#Push tag → publish to PyPI
#📋 Version Bumping Checklist
#Before each release:
#[ ] Update __version__ in src/pyaiagent/__init__.py
#[ ] Update version in pyproject.toml
#[ ] Commit: git commit -m "Bump version to X.Y.Z"
#[ ] Tag: git tag -a vX.Y.Z -m "Release X.Y.Z"
#[ ] Push: git push && git push --tags
#[ ] Publish: python -m build && twine upload dist/*


# 1️⃣ Clean old builds:
# rm -rf dist/ build/
#
# 2️⃣ Build wheels (modern format):
# python -m build
#
# 3️⃣ Test installation:
# pip install dist/worklet-0.1.0-py3-none-any.whl
#
# 4️⃣ Verify:
# python -c "import worklet; print(worklet.__version__)"
# Upload:
# twine upload dist/*

