[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaiagent"
version = "0.1.3"
description = "PyAiAgent is a modern, fast (high-performance), async framework for building AI agents with pythonic code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Troy M Jose", email = "troymjose@gmail.com" }
]
keywords = [
    "openai",
    "ai",
    "agent",
    "llm",
    "gpt",
    "async",
    "framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "openai>=1.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/troymjose/pyaiagent"
Repository = "https://github.com/troymjose/pyaiagent"
Issues = "https://github.com/troymjose/pyaiagent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyaiagent = ["py.typed"]

#Before each release:
#[ ] Update __version__ in src/pyaiagent/__init__.py
#[ ] Update version in pyproject.toml
#[ ] Add: git add pyproject.toml
#[ ] Add: git add src/pyaiagent/__init__.py
#[ ] Commit: git commit -m "Bump version to X.Y.Z"
#[ ] Tag: git tag -a vX.Y.Z -m "Release X.Y.Z"
#[ ] Push: git push && git push --tags
#[ ] Clean old builds: rm -rf dist/ build/
#[ ] Build wheels (modern format): python -m build
#[ ] Test installation: pip install dist/pyaiagent-0.1.3-py3-none-any.whl
#[ ] Verify:python -c "import pyaiagent; print(pyaiagent.__version__)"
#[ ] Publish: twine upload dist/*